Bug 1068394 - Explode H.264 NALs into separate decode buffers for OMX. r=pkerr, a=bajaj